--- a/src/css/_header.css
+++ b/src/css/_header.css
@@ -5,15 +5,15 @@
 }
 
 .header__container {
+  -webkit-box-align: center;
+    -ms-flex-align: center;
+      align-items: center;
   display: -webkit-box;
     display: -ms-flexbox;
       display: flex;
   -webkit-box-pack: justify;
     -ms-flex-pack: justify;
       justify-content: space-between;
-  -webkit-box-align: center;
-    -ms-flex-align: center;
-      align-items: center;
   margin: 0 auto;
   max-width: {{ get_theme_style_setting('spacing_group.spacing.max_width', 'px') }};
   padding: 25px 40px;
@@ -45,11 +45,11 @@
 
 @media screen and (max-width: 767px) {
   .header .header__menu {
-      margin-left: 0;
-      min-height: 0;
-      -webkit-box-ordinal-group: 4;
+    margin-left: 0;
+    min-height: 0;
+    -webkit-box-ordinal-group: 4;
       -ms-flex-order: 3;
-          order: 3;
+        order: 3;
   }
 }
 
@@ -75,8 +75,8 @@
 }
 
 .header__language-switcher .lang_switcher_class .globe_class {
-  background-color: #fff;
-  border: 1px solid #fff;
+  background-color: #FFFFFF;
+  border: 1px solid #FFFFFF;
   border-radius: 50%;
   margin-top: 5px;
 }
@@ -214,14 +214,14 @@
 }
 
 .header__language-switcher-label-current {
+  -webkit-box-align: center;
+    -ms-flex-align: center;
+      align-items: center;
   display: -webkit-box;
     display: -ms-flexbox;
       display: flex;
   line-height: 2;
   margin-left: 10px;
-  -webkit-box-align: center;
-    -ms-flex-align: center;
-      align-items: center;
 }
 
 @media(max-width: 767px) {
